split modules